# everyone-a-dj

./: .gitignore  PLAN.md  README.md  mix_dj.py  mix_pro.py  pyproject.toml
src/mashup/: __init__.py  analyze.py  api.py  cache.py  cli.py  config.py  demo.py  diagnostics.py  discover.py  live.py  lyrics.py  moment_detector.py  orchestrator.py  plan.py  planner.py  ranker.py  render.py  renderer.py  session.py  stems.py
src/mashup/signals/: audio.py  lrclib.py  transliteration.py  youtube.py
src/mashup/static/: index.html
tests/: test_lrclib.py  test_planner.py  test_ranker.py  test_renderer.py  test_transliteration.py
